<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <TextView
            android:text="@string/tituloencuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tituloencuesta"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/pregunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pregunta1"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/respuesta1"
            android:background="#ffffff"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/pistaencuesta" />

        <TextView
            android:text="@string/pregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pregunta2"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/respuesta2"
            android:background="#ffffff"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:hint="@string/pistaencuesta" />

        <TextView
            android:text="@string/pregunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pregunta3"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/respuesta3"
            android:background="#ffffff"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:hint="@string/pistaencuesta" />

        <TextView
            android:text="@string/pregunta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pregunta4"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/respuesta4"
            android:background="#ffffff"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:hint="@string/pistaencuesta" />

        <TextView
            android:text="@string/pregunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pregunta5"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/respuesta5"
            android:background="#ffffff"
            android:gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="45dp"
            android:hint="@string/pistaencuesta" />

        <TextView
            android:text="@string/aviso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/aviso"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#ffff00"
            android:textStyle="bold|normal"
            android:textSize="20sp"
            android:gravity="center_vertical|center" />

        <Button
            android:text="@string/botoncontinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/survey_button"
            android:layout_marginTop="15dp"
            android:background="@drawable/mybutton"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>