<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:background="#000000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ultimo"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="#000000"/>

            <TextView
            android:id="@+id/despedida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/despedida"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_weight="5"
            android:gravity="center"
            android:layout_margin="15dp" />
            <Button
                android:id="@+id/send_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:text="@string/send_mail"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
